@@ -36,6 +36,7 @@
 #include "PropertyEditorMesh.h"
 #include "SoFCMeshNode.h"
 #include "ViewProvider.h"
+#include "ViewProviderMeshNode.h"
 #include "ViewProviderCurvature.h"
 #include "ViewProviderTransform.h"
 #include "ViewProviderTransformDemolding.h"
@@ -79,6 +80,7 @@ void GuiMeshExport initMeshGui() {
   MeshGui::PropertyEditorMesh                ::init();
   MeshGui::SoFCMeshNode                      ::initClass();
   MeshGui::ViewProviderMesh                  ::init();
+  MeshGui::ViewProviderMeshNode              ::init();
   MeshGui::ViewProviderExport                ::init();
   MeshGui::ViewProviderMeshCurvature         ::init();
   MeshGui::ViewProviderMeshTransform         ::init();
