@@ -127,3 +127,4 @@ Version: V0.5B7 Date: Thu May 18 16:37:30 2006 +++++++++++++++++++++++++++++++
 + Prepend SoCallback node to log all traversing actions (only for debugging)
 + command for toggling clipping plane
 + command for freezing view positions
++ added new ViewProvider for meshes with more than 100.000 triangles using SoFCMeshNode for optimizations
